Ensure screen reader text is read as words and not affected by word-wrap

--- a/develop/scss/base/_accessibility.scss
+++ b/develop/scss/base/_accessibility.scss
@@ -11,6 +11,7 @@
 	width: 1px;
 	border: 0;
 	overflow: hidden;
+	word-wrap: normal !important;
 }
 
 .screen-reader-text:focus,
